--- a/about.html
+++ b/about.html
@@ -1,7 +1,3 @@
-<?php 
-  session_start();
-?>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,32 +9,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet" />
-
-    <title>Emilite,Emina Versi Lite</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
+    <title>Tentang Emina</title>
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
-
     <link rel="stylesheet" href="assets/css/templatemo-hexashop.css" />
-
     <link rel="stylesheet" href="assets/css/owl-carousel.css" />
-    <link rel="stylesheet" href="assets/css/loader.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
+    <link rel="stylesheet" href="assets/css/loader.css" />
     <link href="assets/images/logo-eminachh.png" rel="icon" />
-    <!--
-
-TemplateMo 571 Hexashop
-
-https://templatemo.com/tm-571-hexashop
-
--->
   </head>
 
   <body>
-
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
       <div class="container">
@@ -53,42 +36,31 @@ https://templatemo.com/tm-571-hexashop
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li class="scroll-to-section">
-                  <a href="home.php" class="active">Home</a>
+                  <a href="home.html">Home</a>
                 </li>
                 <li class="submenu">
                   <a href="javascript:;">Shop</a>
                   <ul>
-                    <li><a href="makeup.php">Make Up</a></li>
-                    <li><a href="skincare.php">Skincare</a></li>
+                    <li><a href="makeup.html">Make Up</a></li>
+                    <li><a href="skincare.html">Skincare</a></li>
                   </ul>
                 </li>
-                <li class="scroll-to-section"><a href="contact.php">Contact Us</a></li>
+                <li class="scroll-to-section"><a href="contact.html">Contact Us</a></li>
                 <li class="submenu">
-                  <a href="javascript:;">Explore</a>
+                  <a href="javascript:;" class="active">Explore</a>
                   <ul>
-                    <li><a href="about.php">About Us</a></li>
-                    <li><a href="faq.php">FAQ</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                   </ul>
                 </li>
-                <?php if (isset($_SESSION['username'])): ?>
                   <li class="scroll-to-section">
-                    <a href="index.php?action=logout">
-                      <i class="fa fa-user" aria-hidden="true"></i>
-                      <span>
-                        Logout
-                      </span>
-                    </a>
-                  </li>
-                <?php else: ?>
-                  <li class="scroll-to-section">
-                    <a href="login.php">
+                    <a href="login.html">
                       <i class="fa fa-user" aria-hidden="true"></i>
                       <span>
                         Login
                       </span>
                     </a>
                   </li>
-                <?php endif ?>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -100,70 +72,58 @@ https://templatemo.com/tm-571-hexashop
       </div>
     </header>
     <!-- ***** Header Area End ***** -->
-    <!-- ***** Main Banner Area Start ***** -->
-    <section class="main-banner">
-      <div class="slider-wrapper">
-        <div class="slider">
-          <img id="slide-1" src="assets/images/eminaa.png" />
-          <img id="slide-2" src="assets/images/eminaa 2.jpg" />
-          <img id="slide-3" src="assets/images/eminaa 3.jpg" />
-        </div>
-        <div class="slider-nav">
-          <a href="#slide-1"></a>
-          <a href="#slide-2"></a>
-          <a href="#slide-3"></a>
-        </div>
-      </div>
-    </section>
-    <!-- ***** Main Banner Area End ***** -->
 
-    <!-- ***** BestPicks Area Start ***** -->
-    <section class="products">
-      <h2>Hottiest <span>Picks!</span></h2>
-      <h5>Check it out our hottiest picks</h5>
-      <hr />
-      <div class="all-products">
-        <div class="product">
-          <img src="assets/images/bbcream.png" />
-          <div class="product-info">
-            <h4 class="product-title">Daily Matte BB Cream</h4>
+    <!--***** About Section Start *****-->
+    <section class="section" id="explore">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="left-content">
+              <h2>Get to know more about us!</h2>
+              <span>Setiap orang membutuhkan sahabat dalam hidup mereka, begitu pula kulit Anda. Mari menjadi sahabat yang dibutuhkan, mulai dari menggunakan produk perawatan kulit yang paling aman dan sesuai. </span>
+              <div class="quote">
+                <i class="fa fa-quote-left"></i>
+                <p>Emina akan membantu Anda mengungkap rahasia tentang cara membuat bagian terbesar namun terpenting dari tubuh Anda bahagia dan sehat.</p>
+              </div>
+              <p>Sebagai sahabat pertama Anda dalam urusan perawatan kulit, dengan senang hati kami akan membantu dan memberikan bantuan tentang cara merawat kulit yang benar dari panduan dan rutinitas yang khusus dibuat untuk Anda!</p>
+              <p>
+                Anda juga dapat mempelajari cara menggunakan produk kulit dan cara memaksimalkan produk perawatan kulit. Ssst, kita juga bisa melakukannya bersama, lho? : D Kulit yang bahagia dan sehat adalah pertanda bahwa Anda merawat
+                diri dengan baik, dan itu akan membantu Anda merasa nyaman dengan diri sendiri! Saat Anda merasa nyaman dengan diri sendiri, Anda pasti bisa berbuat baik
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="product">
-          <img src="assets/images/bs-face-wash.png" />
-          <div class="product-info">
-            <h4 class="product-title">Bright Stuff Face Wash</h4>
-          </div>
-        </div>
-        <div class="product">
-          <img src="assets/images/compact-powder1.png" />
-          <div class="product-info">
-            <h4 class="product-title">Daily Matte Compact Powder</h4>
-          </div>
-        </div>
-        <div class="product">
-          <img src="assets/images/bsloose.png" />
-          <div class="product-info">
-            <h4 class="product-title">Bright Stuff Loose Powder</h4>
-          </div>
-        </div>
-        <div class="product">
-          <img src="assets/images/sunbat45.png" />
-          <div class="product-info">
-            <h4 class="product-title">Sun Battle Spf 45 PA+++</h4>
-          </div>
-        </div>
-        <div class="product">
-          <img src="assets/images/toner.png" />
-          <div class="product-info">
-            <h4 class="product-title">Bright Stuff Toner</h4>
+          <div class="col-lg-6">
+            <div class="right-content">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="leather">
+                    <h4><a href="skincare.html">Skincare</a></h4>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="first-image">
+                    <img src="assets/images/abt1.2.png" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="second-image">
+                    <img src="assets/images/abt2.png" alt="" />
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="types">
+                    <h4><a href="makeup.html">Make up</a></h4>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- ***** BestPicks Area End ***** -->
+    <!--***** About Section End *****-->
 
-    <!-- ***** Footer Start ***** -->
+    <!-- ***** Footer Area Start ***** -->
     <footer>
       <div class="container">
         <div class="row">
@@ -182,9 +142,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="foot1">
               <h4>Emina's Category</h4>
               <ul>
-                <li><a href="makeup.php">Make Up</a></li>
-                <li><a href="skincare.php">Skincare</a></li>
-                <li><a href="voucher.php">Voucher</a></li>
+                <li><a href="makeup.html">Make Up</a></li>
+                <li><a href="skincare.html">Skincare</a></li>
               </ul>
             </div>
           </div>
@@ -192,9 +151,9 @@ https://templatemo.com/tm-571-hexashop
             <div class="foot2">
               <h4>Useful Link</h4>
               <ul>
-                <li><a href="about.php">About Us</a></li>
-                <li><a href="contact.php">Contact Us</a></li>
-                <li><a href="faq.php">FAQ</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -206,12 +165,13 @@ https://templatemo.com/tm-571-hexashop
         </div>
       </div>
     </footer>
+    <!-- ***** Footer Area End ***** -->
 
     <!-- Loading Screen -->
     <div class="loading-screen animate_animated animate_fadeInUp">
       <div class="loader"></div>
       <h1>Born to be loved</h1>
-          
+           
     </div>
 
     <!-- jQuery -->
@@ -232,29 +192,9 @@ https://templatemo.com/tm-571-hexashop
     <script src="assets/js/slick.js"></script>
     <script src="assets/js/lightbox.js"></script>
     <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/swiper.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/filter.js"></script>
     <script src="assets/js/loader.js"></script>
 
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
-
-    <script>
-      $(function () {
-        var selectedClass = "";
-        $("p").click(function () {
-          selectedClass = $(this).attr("data-rel");
-          $("#portfolio").fadeTo(50, 0.1);
-          $("#portfolio div")
-            .not("." + selectedClass)
-            .fadeOut();
-          setTimeout(function () {
-            $("." + selectedClass).fadeIn();
-            $("#portfolio").fadeTo(50, 1);
-          }, 500);
-        });
-      });
-    </script>
   </body>
 </html>
