--- a/skincare.html
+++ b/skincare.html
@@ -1,7 +1,3 @@
-<?php 
-  session_start();
-?>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,25 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet" />
-
-    <title>Emilite,Emina Versi Lite</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
+    <title>Skincare Emina</title>
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
     <link rel="stylesheet" href="assets/css/templatemo-hexashop.css" />
     <link rel="stylesheet" href="assets/css/owl-carousel.css" />
-    <link rel="stylesheet" href="assets/css/loader.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
+    <link rel="stylesheet" href="assets/css/loader.css" />
     <link href="assets/images/logo-eminachh.png" rel="icon" />
-    <!--
-
-TemplateMo 571 Hexashop
-
-https://templatemo.com/tm-571-hexashop
-
--->
   </head>
 
   <body>
@@ -42,49 +29,38 @@ https://templatemo.com/tm-571-hexashop
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="index.php" class="logo">
+              <a href="index.html" class="logo">
                 <img src="assets/images/logo emina.png" />
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li class="scroll-to-section">
-                  <a href="home.php">Home</a>
+                  <a href="home.html">Home</a>
                 </li>
                 <li class="submenu">
                   <a href="javascript:;" class="active">Shop</a>
                   <ul>
-                    <li><a href="makeup.php">Make Up</a></li>
-                    <li><a href="skincare.php">Skincare</a></li>
+                    <li><a href="makeup.html">Make Up</a></li>
+                    <li><a href="skincare.html">Skincare</a></li>
                   </ul>
                 </li>
-                <li class="scroll-to-section"><a href="contact.php">Contact Us</a></li>
+                <li class="scroll-to-section"><a href="contact.html">Contact Us</a></li>
                 <li class="submenu">
                   <a href="javascript:;">Explore</a>
                   <ul>
-                    <li><a href="about.php">About Us</a></li>
-                    <li><a href="faq.php">FAQ</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                   </ul>
                 </li>
-                <?php if (isset($_SESSION['username'])): ?>
                   <li class="scroll-to-section">
-                    <a href="index.php?action=logout">
-                      <i class="fa fa-user" aria-hidden="true"></i>
-                      <span>
-                        Logout
-                      </span>
-                    </a>
-                  </li>
-                <?php else: ?>
-                  <li class="scroll-to-section">
-                    <a href="login.php">
+                    <a href="login.html">
                       <i class="fa fa-user" aria-hidden="true"></i>
                       <span>
                         Login
                       </span>
                     </a>
                   </li>
-                <?php endif ?>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
@@ -96,13 +72,14 @@ https://templatemo.com/tm-571-hexashop
       </div>
     </header>
     <!-- ***** Header Area End ***** -->
+
     <!-- ***** Banner Skincare Area Start ***** -->
     <section id="skincare-banner">
       <img src="assets/images/bnrskncre.jpg" />
     </section>
     <!-- ***** Main Banner Area End ***** -->
 
-    <!-- ***** Skincare Area Starts ***** -->
+    <!-- ***** Skincare Area Start ***** -->
     <div class="container">
       <div class="row justify-content-left">
         <h2>Emina <span>Skincare</span> Products</h2>
@@ -205,8 +182,9 @@ https://templatemo.com/tm-571-hexashop
         </div>
       </div>
     </div>
+    <!-- ***** Skincare Area End ***** -->
 
-    <!-- ***** Preview Start ***** -->
+    <!-- ***** Preview Area Start ***** -->
     <div class="products-preview">
       <div class="preview" preview-target="p-1">
         <i class="fa fa-times"></i>
@@ -400,9 +378,9 @@ https://templatemo.com/tm-571-hexashop
         </div>
       </div>
     </div>
-    <!-- ***** Preview End ***** -->
+    <!-- ***** Preview Area End ***** -->
 
-    <!-- ***** Footer Start ***** -->
+    <!-- ***** Footer Area Start ***** -->
     <footer>
       <div class="container">
         <div class="row">
@@ -421,9 +399,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="foot1">
               <h4>Emina's Category</h4>
               <ul>
-                <li><a href="makeup.php">Make Up</a></li>
-                <li><a href="skincare.php">Skincare</a></li>
-                <li><a href="voucher.php">Voucher</a></li>
+                <li><a href="makeup.html">Make Up</a></li>
+                <li><a href="skincare.html">Skincare</a></li>
               </ul>
             </div>
           </div>
@@ -431,9 +408,9 @@ https://templatemo.com/tm-571-hexashop
             <div class="foot2">
               <h4>Useful Link</h4>
               <ul>
-                <li><a href="about.php">About Us</a></li>
-                <li><a href="contact.php">Contact Us</a></li>
-                <li><a href="faq.php">FAQ</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
           </div>
@@ -445,6 +422,7 @@ https://templatemo.com/tm-571-hexashop
         </div>
       </div>
     </footer>
+    <!-- ***** Footer Area End ***** -->
 
     <!-- Loading Screen -->
     <div class="loading-screen animate_animated animate_fadeInUp">
@@ -478,22 +456,5 @@ https://templatemo.com/tm-571-hexashop
 
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
-
-    <script>
-      $(function () {
-        var selectedClass = "";
-        $("p").click(function () {
-          selectedClass = $(this).attr("data-rel");
-          $("#portfolio").fadeTo(50, 0.1);
-          $("#portfolio div")
-            .not("." + selectedClass)
-            .fadeOut();
-          setTimeout(function () {
-            $("." + selectedClass).fadeIn();
-            $("#portfolio").fadeTo(50, 1);
-          }, 500);
-        });
-      });
-    </script>
   </body>
 </html>
