--- a/faq.html
+++ b/faq.html
@@ -135,10 +135,8 @@
       </div>
       <div class="panel">
         <p>
-          Produk-produk Hanasui bisa didapatkan di e-commerce kesayangan kamu
-          (Shopee, Tokopedia, Lazada, TikTok Shop) dan tersedia di offline store
-          seperti Dan+Dan, AEON, Guardian, Alfamart, Indomart, Alfamidi, dan
-          berbagai toko kosmetik di seluruh Indonesia.
+          Produk-produk Hanasui bisa didapatkan di e-commerce dan tersedia di
+          offline store kesayangan kamu
         </p>
       </div>
     </div>
