--- a/makeup.html
+++ b/makeup.html
@@ -116,7 +116,7 @@
         <div class="card" data-name="face" preview-name="p-1">
           <img src="assets/images/dm-compact.jpg" />
           <div class="card-body">
-            <h6 class="card-title">DM — Compact Powder</h6>
+            <h6 class="card-title">Compact Powder</h6>
             <p class="card-price">IDR 38,000</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -124,7 +124,7 @@
         <div class="card" data-name="face" preview-name="p-13">
           <img src="assets/images/dm-bbcream.jpg" />
           <div class="card-body">
-            <h6 class="card-title">DM — BB Cream</h6>
+            <h6 class="card-title">BB Cream</h6>
             <p class="card-price">IDR 25,000</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -132,7 +132,7 @@
         <div class="card" data-name="face" preview-name="p-2">
           <img src="assets/images/dm-cushion.jpg" />
           <div class="card-body">
-            <h6 class="card-title">DM — Cushion</h6>
+            <h6 class="card-title">Cushion</h6>
             <p class="card-price">IDR 79,500</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -140,7 +140,7 @@
         <div class="card" data-name="face" preview-name="p-3">
           <img src="assets/images/bs-loose.jpg" />
           <div class="card-body">
-            <h6 class="card-title">BS — Loose Powder</h6>
+            <h6 class="card-title">Loose Powder</h6>
             <p class="card-price">IDR 20,000</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -148,7 +148,7 @@
         <div class="card" data-name="face" preview-name="p-4">
           <img src="assets/images/pressed-blush.jpg" />
           <div class="card-body">
-            <h6 class="card-title">Cheek Lit Pressed Blush</h6>
+            <h6 class="card-title">Pressed Blush</h6>
             <p class="card-price">IDR 35,500</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -180,7 +180,7 @@
         <div class="card" data-name="lips" preview-name="p-8">
           <img src="assets/images/lip-balm.jpg" />
           <div class="card-body">
-            <h6 class="card-title">Tinted Lip Balm Stick</h6>
+            <h6 class="card-title">Tinted Lip Balm</h6>
             <p class="card-price">IDR 24,000</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -188,7 +188,7 @@
         <div class="card" data-name="eyes" preview-name="p-9">
           <img src="assets/images/eyeliner.jpg" />
           <div class="card-body">
-            <h6 class="card-title">Pencil Eye Liner</h6>
+            <h6 class="card-title">Eye Liner</h6>
             <p class="card-price">IDR 34,000</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -196,7 +196,7 @@
         <div class="card" data-name="eyes" preview-name="p-10">
           <img src="assets/images/starmascara.jpg" />
           <div class="card-body">
-            <h6 class="card-title">Star Lash Mascara</h6>
+            <h6 class="card-title">Lash Mascara</h6>
             <p class="card-price">IDR 54,500</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -204,7 +204,7 @@
         <div class="card" data-name="eyes" preview-name="p-11">
           <img src="assets/images/eyebrow.jpg" />
           <div class="card-body">
-            <h6 class="card-title">Top Secret Eyebrow</h6>
+            <h6 class="card-title">Secret Eyebrow</h6>
             <p class="card-price">IDR 48,500</p>
             <a class="card-btn" href="#">See all</a>
           </div>
@@ -212,7 +212,7 @@
         <div class="card" data-name="eyes" preview-name="p-12">
           <img src="assets/images/eyeshadow.jpg" />
           <div class="card-body">
-            <h6 class="card-title">Pop Rouge Eyeshadow</h6>
+            <h6 class="card-title">Rouge Eyeshadow</h6>
             <p class="card-price">IDR 39,500</p>
             <a class="card-btn" href="#">See all</a>
           </div>
